<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="#009688"
        app:title="Agendar novo paciente"
        app:navigationIcon="@drawable/ic_baseline_navigate_before_24"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="32dp"/>

    <androidx.constraintlayout.widget.Guideline

        android:id="@+id/guide_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="32dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titulo"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="@+id/guide_start"
        app:layout_constraintEnd_toEndOf="@+id/guide_end"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="16dp"
        android:hint="nome"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/age"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="177dp"
        android:layout_height="62dp"
        android:layout_marginTop="20dp"
        android:hint="idade"
        app:layout_constraintEnd_toEndOf="@+id/guide_end"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guide_start"
        app:layout_constraintTop_toBottomOf="@+id/titulo">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:inputType="number" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addresse"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Endereço"
        app:layout_constraintEnd_toEndOf="@+id/guide_end"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guide_start"
        app:layout_constraintTop_toBottomOf="@+id/age"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/descricao"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/label_description"
        app:layout_constraintEnd_toEndOf="@+id/guide_end"
        app:layout_constraintStart_toStartOf="@+id/guide_start"
        app:layout_constraintTop_toBottomOf="@+id/addresse">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="103dp"
            android:inputType="textMultiLine" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="16dp"
        android:hint="@string/label_date"
        android:layout_marginEnd="16dp"
        app:startIconDrawable="@drawable/ic_baseline_calendar"
        app:layout_constraintTop_toBottomOf="@+id/descricao"
        app:layout_constraintStart_toStartOf="@+id/guide_start"
        app:layout_constraintEnd_toStartOf="@+id/hour">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:focusable="false"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/hour"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/label_hour"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/ic_baseline_more_time_24"
        app:layout_constraintTop_toTopOf="@+id/date"
        app:layout_constraintEnd_toEndOf="@+id/guide_end"
        app:layout_constraintStart_toEndOf="@+id/date">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:layout_constraintStart_toStartOf="@+id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        android:text="@string/label_cancel"
        android:textAllCaps="false">

    </com.google.android.material.button.MaterialButton>
    
    <com.google.android.material.button.MaterialButton

        android:id="@+id/button1"
        style="@style/Widget.MaterialComponents.Button"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/label_new_task"
        android:textAllCaps="false"
        >

    </com.google.android.material.button.MaterialButton>


</androidx.constraintlayout.widget.ConstraintLayout>